# fcitx-unikey

./: CMakeLists.txt  ChangeLog  README
data/: CMakeLists.txt  fcitx-unikey.conf.in  fcitx-unikey.desc
macro-editor/: CMakeLists.txt  common.h  dialog.cpp  dialog.h  editor.cpp  editor.h  editor.ui  main.cpp  main.h  model.cpp  model.h
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-unikey.pot  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  fcitx-unikey.conf.in  fcitx-unikey.conf.in.in  fcitx-unikey.desc  unikey-config.cpp  unikey-config.h  unikey-im.cpp  unikey-im.h  unikey-ui.cpp  unikey-ui.h  unikey.conf.in
unikey/: CMakeLists.txt  COPYING  charset.cpp  charset.h  convert.cpp  data.cpp  error.cpp  inputproc.cpp  inputproc.h  keycons.h  mactab.cpp  mactab.h  pattern.cpp  pattern.h  ukengine.cpp  ukengine.h  unikey.cpp  unikey.h  usrkeymap.cpp  usrkeymap.h  vnconv.h  vnlexi.h
